--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  
   "name": "roboluk",
+  "homepage": "https://LukaNoza.github.io/roboluk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
